--- a/src/styles.css
+++ b/src/styles.css
@@ -76,7 +76,7 @@ body {
         height: 100%;
         background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer1.svg) left bottom repeat-x;
         background-size: 1200px auto;
-        z-index: 5; }
+        z-index: 9; }
       body .container .landscape .layer-2 {
         animation: parallax_fg linear 30s infinite both;
         position: absolute;
@@ -86,7 +86,7 @@ body {
         height: 100%;
         background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer2.svg) left bottom repeat-x;
         background-size: 1200px auto;
-        z-index: 4; }
+        z-index: 8; }
       body .container .landscape .layer-3 {
         animation: parallax_fg linear 90s infinite both;
         position: absolute;
@@ -96,7 +96,7 @@ body {
         height: 100%;
         background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer3.svg) left bottom repeat-x;
         background-size: 1200px auto;
-        z-index: 3; }
+        z-index: 7; }
       body .container .landscape .layer-4 {
         animation: parallax_fg linear 500s infinite both;
         position: absolute;
@@ -106,16 +106,17 @@ body {
         height: 100%;
         background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer4.svg) left bottom repeat-x;
         background-size: 1200px auto;
-        z-index: 2; }
+        z-index: 6; }
       body .container .landscape .layer-5 {
+        animation: parallax_fg linear 5000s infinite both;
         position: absolute;
         bottom: 0;
         left: 0;
         width: 100%;
         height: 100%;
         background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer5.svg) left bottom repeat-x;
-        background-size: 1200px 450px;
-        z-index: 1; }
+        background-size: 1200px auto;
+        z-index: 5; }
 
 .toolbar {
   position: absolute;
