--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,8 +1,8 @@
 @keyframes parallax_fg
   0%
-    background-position: 0px 100%  
-  100% 
-   background-position: 1200px 100%
+    background-position: 0px 100%
+  100%
+    background-position: 1200px 100%
 
 body, window, document
   margin: 0
@@ -18,7 +18,7 @@ body, window, document
   margin: 0 auto
   background: blue
   text-align: center
-  
+
 body
   height: 100vh
 
@@ -69,56 +69,21 @@ body
       background: #6E4C7D
       left: 50%
       margin-left: -300px
-      .layer-1
-        animation: parallax_fg linear 6s infinite both
-        position: absolute
-        bottom: 0
-        left: 0
-        width: 100%
-        height: 100%
-        background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer1.svg) left bottom repeat-x
-        background-size: 1200px auto
-        z-index: 5
-      .layer-2
-        animation: parallax_fg linear 30s infinite both
-        position: absolute
-        bottom: 0
-        left: 0
-        width: 100%
-        height: 100%
-        background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer2.svg) left bottom repeat-x
-        background-size: 1200px auto
-        z-index: 4
-      .layer-3
-        animation: parallax_fg linear 90s infinite both
-        position: absolute
-        bottom: 0
-        left: 0
-        width: 100%
-        height: 100%
-        background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer3.svg) left bottom repeat-x
-        background-size: 1200px auto
-        z-index: 3
-      .layer-4
-        animation: parallax_fg linear 500s infinite both
-        position: absolute
-        bottom: 0
-        left: 0
-        width: 100%
-        height: 100%
-        background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer4.svg) left bottom repeat-x
-        background-size: 1200px auto
-        z-index: 2
-      .layer-5
-        // animation: parallax_fg linear 360s infinite both
-        position: absolute
-        bottom: 0
-        left: 0
-        width: 100%
-        height: 100%
-        background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer5.svg) left bottom repeat-x
-        background-size: 1200px 450px
-        z-index: 1
+      @each $index, $speed in (1, 6s),
+      (2, 30s),
+      (3, 90s),
+      (4, 500s),
+      (5, 5000s)
+        .layer-#{$index}
+          animation: parallax_fg linear $speed infinite both
+          position: absolute
+          bottom: 0
+          left: 0
+          width: 100%
+          height: 100%
+          background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer#{$index}.svg) left bottom repeat-x
+          background-size: 1200px auto
+          z-index: 10 - $index
 
 .toolbar
   position: absolute
