--- a/src/styles.sass
+++ b/src/styles.sass
@@ -69,21 +69,22 @@ body
       background: #6E4C7D
       left: 50%
       margin-left: -300px
-      @each $index, $speed in (1, 6s),
-      (2, 30s),
-      (3, 90s),
-      (4, 500s),
-      (5, 5000s)
-        .layer-#{$index}
-          animation: parallax_fg linear $speed infinite both
-          position: absolute
-          bottom: 0
-          left: 0
-          width: 100%
-          height: 100%
-          background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer#{$index}.svg) left bottom repeat-x
-          background-size: 1200px auto
-          z-index: 10 - $index
+      &.dawn
+        @each $index, $speed in (1, 6s),
+        (2, 30s),
+        (3, 90s),
+        (4, 500s),
+        (5, 5000s)
+          .layer-#{$index}
+            animation: parallax_fg linear $speed infinite both
+            position: absolute
+            bottom: 0
+            left: 0
+            width: 100%
+            height: 100%
+            background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer#{$index}.svg) left bottom repeat-x
+            background-size: 1200px auto
+            z-index: 10 - $index
 
 .toolbar
   position: absolute
