--- a/src/styles.sass
+++ b/src/styles.sass
@@ -66,10 +66,10 @@ body
       top: 110px
       min-width: 600px
       clip: rect(0px, 600px, 400px, 0px)
-      background: #6E4C7D
       left: 50%
       margin-left: -300px
       &.dawn
+        background: #6E4C7D
         @each $index, $speed in (1, 6s),
         (2, 30s),
         (3, 90s),
@@ -82,7 +82,25 @@ body
             left: 0
             width: 100%
             height: 100%
-            background: url(https://funsies.s3.amazonaws.com/parallax/mountainscape02/layer#{$index}.svg) left bottom repeat-x
+            background: url(http://localhost:8000/assets/svg/mountains-dawn-layer-#{$index}.svg) left bottom repeat-x
+            background-size: 1200px auto
+            z-index: 10 - $index
+            svg
+      &.noon
+        background: #9AE7FF
+        @each $index, $speed in (1, 6s),
+        (2, 30s),
+        (3, 90s),
+        (4, 500s),
+        (5, 5000s)
+          .layer-#{$index}
+            animation: parallax_fg linear $speed infinite both
+            position: absolute
+            bottom: 0
+            left: 0
+            width: 100%
+            height: 100%
+            background: url(http://localhost:8000/assets/svg/mountains-noon-layer-#{$index}.svg) left bottom repeat-x
             background-size: 1200px auto
             z-index: 10 - $index
 
