--- a/src/styles.sass
+++ b/src/styles.sass
@@ -121,7 +121,22 @@ body
               background-size: 1200px auto
               z-index: 10 - $index
         &.night
-          background: black
+          background: #21243E
+          @each $index, $speed in (1, 6s),
+          (2, 30s),
+          (3, 90s),
+          (4, 500s),
+          (5, 5000s)
+            .layer-#{$index}
+              animation: parallax_fg linear $speed infinite both
+              position: absolute
+              bottom: 0
+              left: 0
+              width: 100%
+              height: 100%
+              background: url(http://localhost:8000/assets/svg/mountains-night-layer-#{$index}.svg) left bottom repeat-x
+              background-size: 1200px auto
+              z-index: 10 - $index
       &.sea
         &.dawn
           background: yellow
